Added literature review on uses of DL (85), added detailed description of benefit case (87).

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,12 +1,283 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Chris at 2020-05-26 11:36:19 -0400 
+%% Created for Chris at 2020-05-26 21:29:57 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{zaharia2016apache,
+	Author = {Zaharia, Matei and Xin, Reynold S and Wendell, Patrick and Das, Tathagata and Armbrust, Michael and Dave, Ankur and Meng, Xiangrui and Rosen, Josh and Venkataraman, Shivaram and Franklin, Michael J and others},
+	Date-Added = {2020-05-26 21:29:46 -0400},
+	Date-Modified = {2020-05-26 21:29:46 -0400},
+	Journal = {Communications of the ACM},
+	Number = {11},
+	Pages = {56--65},
+	Publisher = {ACM New York, NY, USA},
+	Title = {Apache spark: a unified engine for big data processing},
+	Volume = {59},
+	Year = {2016}}
+
+@article{batmaz2019review,
+	Author = {Batmaz, Zeynep and Yurekli, Ali and Bilge, Alper and Kaleli, Cihan},
+	Date-Added = {2020-05-26 21:23:48 -0400},
+	Date-Modified = {2020-05-26 21:23:48 -0400},
+	Journal = {Artificial Intelligence Review},
+	Number = {1},
+	Pages = {1--37},
+	Publisher = {Springer},
+	Title = {A review on deep learning for recommender systems: challenges and remedies},
+	Volume = {52},
+	Year = {2019}}
+
+@article{deng2016deep,
+	Author = {Deng, Shuiguang and Huang, Longtao and Xu, Guandong and Wu, Xindong and Wu, Zhaohui},
+	Date-Added = {2020-05-26 21:23:42 -0400},
+	Date-Modified = {2020-05-26 21:23:42 -0400},
+	Journal = {IEEE transactions on neural networks and learning systems},
+	Number = {5},
+	Pages = {1164--1177},
+	Publisher = {IEEE},
+	Title = {On deep learning for trust-aware recommendations in social networks},
+	Volume = {28},
+	Year = {2016}}
+
+@inproceedings{karatzoglou2017deep,
+	Author = {Karatzoglou, Alexandros and Hidasi, Bal{\'a}zs},
+	Booktitle = {Proceedings of the eleventh ACM conference on recommender systems},
+	Date-Added = {2020-05-26 21:23:35 -0400},
+	Date-Modified = {2020-05-26 21:23:35 -0400},
+	Pages = {396--397},
+	Title = {Deep learning for recommender systems},
+	Year = {2017}}
+
+@inproceedings{wang2015collaborative,
+	Author = {Wang, Hao and Wang, Naiyan and Yeung, Dit-Yan},
+	Booktitle = {Proceedings of the 21th ACM SIGKDD international conference on knowledge discovery and data mining},
+	Date-Added = {2020-05-26 21:23:28 -0400},
+	Date-Modified = {2020-05-26 21:23:28 -0400},
+	Pages = {1235--1244},
+	Title = {Collaborative deep learning for recommender systems},
+	Year = {2015}}
+
+@article{shone2018deep,
+	Author = {Shone, Nathan and Ngoc, Tran Nguyen and Phai, Vu Dinh and Shi, Qi},
+	Date-Added = {2020-05-26 21:22:21 -0400},
+	Date-Modified = {2020-05-26 21:22:21 -0400},
+	Journal = {IEEE Transactions on Emerging Topics in Computational Intelligence},
+	Number = {1},
+	Pages = {41--50},
+	Publisher = {IEEE},
+	Title = {A deep learning approach to network intrusion detection},
+	Volume = {2},
+	Year = {2018}}
+
+@article{chalapathy2019deep,
+	Author = {Chalapathy, Raghavendra and Chawla, Sanjay},
+	Date-Added = {2020-05-26 21:22:07 -0400},
+	Date-Modified = {2020-05-26 21:22:07 -0400},
+	Journal = {arXiv preprint arXiv:1901.03407},
+	Title = {Deep learning for anomaly detection: A survey},
+	Year = {2019}}
+
+@inproceedings{du2017deeplog,
+	Author = {Du, Min and Li, Feifei and Zheng, Guineng and Srikumar, Vivek},
+	Booktitle = {Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
+	Date-Added = {2020-05-26 21:22:01 -0400},
+	Date-Modified = {2020-05-26 21:22:01 -0400},
+	Pages = {1285--1298},
+	Title = {Deeplog: Anomaly detection and diagnosis from system logs through deep learning},
+	Year = {2017}}
+
+@article{liu2017detecting,
+	Author = {Liu, Yun and Gadepalli, Krishna and Norouzi, Mohammad and Dahl, George E and Kohlberger, Timo and Boyko, Aleksey and Venugopalan, Subhashini and Timofeev, Aleksei and Nelson, Philip Q and Corrado, Greg S and others},
+	Date-Added = {2020-05-26 21:21:07 -0400},
+	Date-Modified = {2020-05-26 21:21:07 -0400},
+	Journal = {arXiv preprint arXiv:1703.02442},
+	Title = {Detecting cancer metastases on gigapixel pathology images},
+	Year = {2017}}
+
+@incollection{havaei2016deep,
+	Author = {Havaei, Mohammad and Guizard, Nicolas and Larochelle, Hugo and Jodoin, Pierre-Marc},
+	Booktitle = {Machine learning for health informatics},
+	Date-Added = {2020-05-26 21:20:59 -0400},
+	Date-Modified = {2020-05-26 21:20:59 -0400},
+	Pages = {125--148},
+	Publisher = {Springer},
+	Title = {Deep learning trends for focal brain pathology segmentation in MRI},
+	Year = {2016}}
+
+@inproceedings{bar2015chest,
+	Author = {Bar, Yaniv and Diamant, Idit and Wolf, Lior and Lieberman, Sivan and Konen, Eli and Greenspan, Hayit},
+	Booktitle = {2015 IEEE 12th international symposium on biomedical imaging (ISBI)},
+	Date-Added = {2020-05-26 21:20:42 -0400},
+	Date-Modified = {2020-05-26 21:20:42 -0400},
+	Organization = {IEEE},
+	Pages = {294--297},
+	Title = {Chest pathology detection using deep learning with non-medical training},
+	Year = {2015}}
+
+@article{campanella2019clinical,
+	Author = {Campanella, Gabriele and Hanna, Matthew G and Geneslaw, Luke and Miraflor, Allen and Silva, Vitor Werneck Krauss and Busam, Klaus J and Brogi, Edi and Reuter, Victor E and Klimstra, David S and Fuchs, Thomas J},
+	Date-Added = {2020-05-26 21:20:32 -0400},
+	Date-Modified = {2020-05-26 21:20:32 -0400},
+	Journal = {Nature medicine},
+	Number = {8},
+	Pages = {1301--1309},
+	Publisher = {Nature Publishing Group},
+	Title = {Clinical-grade computational pathology using weakly supervised deep learning on whole slide images},
+	Volume = {25},
+	Year = {2019}}
+
+@article{stead2018clinical,
+	Author = {Stead, William W},
+	Date-Added = {2020-05-26 21:20:25 -0400},
+	Date-Modified = {2020-05-26 21:20:25 -0400},
+	Journal = {Jama},
+	Number = {11},
+	Pages = {1107--1108},
+	Publisher = {American Medical Association},
+	Title = {Clinical implications and challenges of artificial intelligence and deep learning},
+	Volume = {320},
+	Year = {2018}}
+
+@article{lehman2019mammographic,
+	Author = {Lehman, Constance D and Yala, Adam and Schuster, Tal and Dontchos, Brian and Bahl, Manisha and Swanson, Kyle and Barzilay, Regina},
+	Date-Added = {2020-05-26 21:20:18 -0400},
+	Date-Modified = {2020-05-26 21:20:18 -0400},
+	Journal = {Radiology},
+	Number = {1},
+	Pages = {52--58},
+	Publisher = {Radiological Society of North America},
+	Title = {Mammographic breast density assessment using deep learning: clinical implementation},
+	Volume = {290},
+	Year = {2019}}
+
+@article{otter2020survey,
+	Author = {Otter, Daniel W and Medina, Julian R and Kalita, Jugal K},
+	Date-Added = {2020-05-26 21:19:11 -0400},
+	Date-Modified = {2020-05-26 21:19:11 -0400},
+	Journal = {IEEE Transactions on Neural Networks and Learning Systems},
+	Publisher = {IEEE},
+	Title = {A Survey of the Usages of Deep Learning for Natural Language Processing},
+	Year = {2020}}
+
+@inproceedings{deselaers2009deep,
+	Author = {Deselaers, Thomas and Hasan, Sa{\v{s}}a and Bender, Oliver and Ney, Hermann},
+	Booktitle = {Proceedings of the Fourth Workshop on Statistical Machine Translation},
+	Date-Added = {2020-05-26 21:19:03 -0400},
+	Date-Modified = {2020-05-26 21:19:03 -0400},
+	Organization = {Association for Computational Linguistics},
+	Pages = {233--241},
+	Title = {A deep learning approach to machine transliteration},
+	Year = {2009}}
+
+@article{socher2012deep,
+	Author = {Socher, Richard and Bengio, Yoshua and Manning, Chris},
+	Date-Added = {2020-05-26 21:18:46 -0400},
+	Date-Modified = {2020-05-26 21:18:46 -0400},
+	Journal = {Tutorial at Association of Computational Logistics (ACL)},
+	Publisher = {Citeseer},
+	Title = {Deep learning for NLP},
+	Year = {2012}}
+
+@article{young2018recent,
+	Author = {Young, Tom and Hazarika, Devamanyu and Poria, Soujanya and Cambria, Erik},
+	Date-Added = {2020-05-26 21:18:36 -0400},
+	Date-Modified = {2020-05-26 21:18:36 -0400},
+	Journal = {ieee Computational intelligenCe magazine},
+	Number = {3},
+	Pages = {55--75},
+	Publisher = {IEEE},
+	Title = {Recent trends in deep learning based natural language processing},
+	Volume = {13},
+	Year = {2018}}
+
+@article{zhang2016deep,
+	Author = {Zhang, Sai and Zhou, Jingtian and Hu, Hailin and Gong, Haipeng and Chen, Ligong and Cheng, Chao and Zeng, Jianyang},
+	Date-Added = {2020-05-26 21:17:58 -0400},
+	Date-Modified = {2020-05-26 21:17:58 -0400},
+	Journal = {Nucleic acids research},
+	Number = {4},
+	Pages = {e32--e32},
+	Publisher = {Oxford University Press},
+	Title = {A deep learning framework for modeling structural features of RNA-binding protein targets},
+	Volume = {44},
+	Year = {2016}}
+
+@article{wei2018prediction,
+	Author = {Wei, Leyi and Ding, Yijie and Su, Ran and Tang, Jijun and Zou, Quan},
+	Date-Added = {2020-05-26 21:17:48 -0400},
+	Date-Modified = {2020-05-26 21:17:48 -0400},
+	Journal = {Journal of Parallel and Distributed Computing},
+	Pages = {212--217},
+	Publisher = {Elsevier},
+	Title = {Prediction of human protein subcellular localization using deep learning},
+	Volume = {117},
+	Year = {2018}}
+
+@article{spencer2014deep,
+	Author = {Spencer, Matt and Eickholt, Jesse and Cheng, Jianlin},
+	Date-Added = {2020-05-26 21:17:37 -0400},
+	Date-Modified = {2020-05-26 21:17:37 -0400},
+	Journal = {IEEE/ACM transactions on computational biology and bioinformatics},
+	Number = {1},
+	Pages = {103--112},
+	Publisher = {IEEE},
+	Title = {A deep learning network approach to ab initio protein secondary structure prediction},
+	Volume = {12},
+	Year = {2014}}
+
+@article{alipanahi2015predicting,
+	Author = {Alipanahi, Babak and Delong, Andrew and Weirauch, Matthew T and Frey, Brendan J},
+	Date-Added = {2020-05-26 21:17:31 -0400},
+	Date-Modified = {2020-05-26 21:17:31 -0400},
+	Journal = {Nature biotechnology},
+	Number = {8},
+	Pages = {831--838},
+	Publisher = {Nature Publishing Group},
+	Title = {Predicting the sequence specificities of DNA-and RNA-binding proteins by deep learning},
+	Volume = {33},
+	Year = {2015}}
+
+@article{voulodimos2018deep,
+	Author = {Voulodimos, Athanasios and Doulamis, Nikolaos and Doulamis, Anastasios and Protopapadakis, Eftychios},
+	Date-Added = {2020-05-26 21:16:48 -0400},
+	Date-Modified = {2020-05-26 21:16:48 -0400},
+	Journal = {Computational intelligence and neuroscience},
+	Publisher = {Hindawi},
+	Title = {Deep learning for computer vision: A brief review},
+	Volume = {2018},
+	Year = {2018}}
+
+@article{guo2016deep,
+	Author = {Guo, Yanming and Liu, Yu and Oerlemans, Ard and Lao, Songyang and Wu, Song and Lew, Michael S},
+	Date-Added = {2020-05-26 21:16:36 -0400},
+	Date-Modified = {2020-05-26 21:16:36 -0400},
+	Journal = {Neurocomputing},
+	Pages = {27--48},
+	Publisher = {Elsevier},
+	Title = {Deep learning for visual understanding: A review},
+	Volume = {187},
+	Year = {2016}}
+
+@article{garcia2017review,
+	Author = {Garcia-Garcia, Alberto and Orts-Escolano, Sergio and Oprea, Sergiu and Villena-Martinez, Victor and Garcia-Rodriguez, Jose},
+	Date-Added = {2020-05-26 21:16:29 -0400},
+	Date-Modified = {2020-05-26 21:16:29 -0400},
+	Journal = {arXiv preprint arXiv:1704.06857},
+	Title = {A review on deep learning techniques applied to semantic segmentation},
+	Year = {2017}}
+
+@phdthesis{cannon1969cellular,
+	Author = {Cannon, Lynn Elliot},
+	Date-Added = {2020-05-26 18:22:34 -0400},
+	Date-Modified = {2020-05-26 18:22:34 -0400},
+	School = {Montana State University-Bozeman, College of Engineering},
+	Title = {A cellular computer to implement the Kalman filter algorithm},
+	Year = {1969}}
 
 @article{chetlur2014cudnn,
 	Author = {Chetlur, Sharan and Woolley, Cliff and Vandermersch, Philippe and Cohen, Jonathan and Tran, John and Catanzaro, Bryan and Shelhamer, Evan},
