--- a/paper/jampi-spark-dotmatrix.tex
+++ b/paper/jampi-spark-dotmatrix.tex
@@ -82,9 +82,9 @@ The matrix multiplication operation $\star$ for an $p \times q$ matrix $\mathbf{
 
 $$ c_{i, j} = \sum_{k = 1}^n a_{i, k} b_{k, j} $$
 
-Matrix multiplication plays a significant role in a range of practical applications, including (but not limited to) the training of deep convolutional neural networks (deep learning). With the increasing importance of deep learning in virtually all fields it has been brought to bear on, it is critical to develop efficient distributed primitives that leverage computational capacity through rapid parallel computation. While packages comprising efficient matrix primitives already exist,\cite{chetlur2014cudnn} these often operate at a low level and do not integrate well with existing and proven solutions to manage large computational loads. In particular, few integrate with Apache Spark, by far one of the most widely used large distributed cluster computing frameworks, and those that do are relatively less efficient. 
+Matrix multiplication plays a significant role in a range of practical applications, including (but not limited to) scientific computing, non-linear modelling, agent-based models and the training of deep convolutional neural networks (deep learning). Deep learning has become a crucial tool for both research and commercial applications, including in computer vision,\cite{guo2016deep,voulodimos2018deep}  bioinformatics,\cite{spencer2014deep,alipanahi2015predicting,zhang2016deep,wei2018prediction} natural language processing (NLP),\cite{deselaers2009deep,socher2012deep,young2018recent,otter2020survey} clinical medicine,\cite{bar2015chest,havaei2016deep,liu2017detecting,stead2018clinical,campanella2019clinical,lehman2019mammographic} anomaly detection in cybersecurity and fraud detection,\cite{du2017deeplog,shone2018deep,chalapathy2019deep} and collaborative intelligence/recommender systems.\cite{wang2015collaborative,deng2016deep,karatzoglou2017deep,batmaz2019review} The proliferation of deep learning as the cognitive technology of choice for problems with large source data sets and high-dimensional or high-order multivariate data means that efficiency gains in the underlying linear algebra primitives has the potential to enable significant performance benefits in a wide range of use cases. In particular, constructing primitives that leverage computational capacity through rapid parallel computation and efficient interchange lends itself as an avenue towards these performance gains. While packages comprising efficient matrix primitives already exist,\cite{chetlur2014cudnn} these often operate at a low level and do not integrate well with existing and proven solutions to manage large computational loads. In particular, few integrate with Apache Spark,\cite{zaharia2016apache} by far one of the most widely used large distributed cluster computing frameworks at the time of writing, and those that do are relatively less efficient.
 
-JAMPI (Java Assisted Matrix Product with Inter-task communication) is an efficient and rapid solution to this problem. By integrating JVM's new \texttt{Vector<>} API, \texttt{nio/netty} for distributed message passing and Spark's barrier mode, a pure Scala implementation of Cannon's algorithm can be devised that is significantly more efficient than \texttt{MLlib}'s \texttt{BlockMatrix.multiply} function. JAMPI thus avoids reliance on low level code on one hand while also being a pure Scala implementation. Thus, it runs natively in Scala, i.e. within the JVM, while also offering the performance increase of a low-level MPI implemented resource negotiation framework.
+JAMPI (Java Assisted Matrix Product with Inter-task communication), the framework described in this paper, is an efficient and rapid solution to an aspect of efficienty matrix primitives, namely matrix multiplication. By integrating JVM's new \texttt{Vector<>} API, \texttt{nio/netty} for distributed message passing and Spark's barrier mode, a pure Scala implementation of Cannon's 2.5D matrix multiplication algorithm can be devised that is significantly more efficient than \texttt{MLlib}'s \texttt{BlockMatrix.multiply} function. JAMPI thus avoids reliance on low level code on one hand, being a pure Scala implementation. On the other hand, it provides a pre-written framework that integrates with Spark as a native task rather than an external MPI procedure call, and handles inter-task communication directly, yielding performance benefits that would otherwise be associated with a low-level MPI implemented resource negotiation framework.
 
 \subsection{Cannon's algorithm} % (fold)
 \label{sub:cannon_s_algorithm}
@@ -112,6 +112,8 @@ For a square matrix of order $n$, i.e. $n \times n$, Cannon's algoritm uses a to
 		\EndFor
 	\EndFor
 \end{algorithmic}
+
+Standard methods of multiplying dense matrices require $O(n^3)$ floating operations for an $n \times n$ operations. Cannon's algorithm 
 
 \subsection{Spark's barrier mode} % (fold)
 \label{sub:spark_s_barrier_mode}
