Fixed algorithmic description (96-112).

--- a/paper/jampi-spark-dotmatrix.tex
+++ b/paper/jampi-spark-dotmatrix.tex
@@ -89,23 +89,21 @@ JAMPI (Java Assisted Matrix Product with Inter-task communication), the framewor
 \subsection{Cannon's algorithm} % (fold)
 \label{sub:cannon_s_algorithm}
 
-% subsection cannon_s_algorithm (end)
-
 The multiplication of square matrices constituites a special case. For a square matrix of order $n$, i.e. an $n \times n$ matrix, a special case obtains, which can be resolved efficiently using Cannon's algorithm.\cite{cannon1969cellular} 
 
-For a square matrix of order $n$, i.e. $n \times n$, Cannon's algoritm uses a toroidally connected mesh $\mathjbf{P}^{n \times n}$ of $n^2$ processes. Rendered in pseudocode, the algorithm can be expressed as follows:
+For a square matrix of order $n$, i.e. $n \times n$, Cannon's algoritm uses a toroidally connected mesh $\mathjbf{P}^{n \times n}$ of $n^2$ processes. Rendered in pseudocode, the algorithm can be expressed as follows for $p$ processors:
 
 \begin{algorithmic}
-	\ForAll{i = 0 : N - 1}
+	\ForAll{i = 0 : \sqrt{p} - 1}
 		\State CShift left A[i; :] by i 
 	\EndFor
 	
-	\ForAll{j = 0 : N - 1}
+	\ForAll{j = 0 : \sqrt{p} - 1}
 		\State CShift up B[:; j] by j 
 	\EndFor
 	
-	\For{k = 0 : N - 1}
-		\For{i = 0 : N - 1, j = 0 : N - 1}
+	\For{k = 0 : \sqrt{p} - 1}
+		\For{i = 0 : \sqrt{p} - 1, j = 0 : \sqrt{p} - 1}
 			\State C[i, j] += A[i, j] * B[i, j]
 			\State CShift left A[i; :] by 1
 			\State CShift up B[:; j] by 1
@@ -113,7 +111,9 @@ For a square matrix of order $n$, i.e. $n \times n$, Cannon's algoritm uses a to
 	\EndFor
 \end{algorithmic}
 
-Standard methods of multiplying dense matrices require $O(n^3)$ floating operations for an $n \times n$ operations. Cannon's algorithm 
+Standard methods of multiplying dense matrices require $O(n^3)$ floating operations for an $n \times n$ operations. Cannon's algorithm is designed to be performed on a virtual square grid of processors 
+
+% subsection cannon_s_algorithm (end)
 
 \subsection{Spark's barrier mode} % (fold)
 \label{sub:spark_s_barrier_mode}
