Resized Fig.1 to fit breaks better (92).

--- a/paper/jampi-spark-dotmatrix.tex
+++ b/paper/jampi-spark-dotmatrix.tex
@@ -89,7 +89,7 @@ The future of deep learning over big data depends greatly on facilitating the co
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\linewidth]{figures/fig1.pdf}
+	\includegraphics[width=0.9\linewidth]{figures/fig1.pdf}
 	\vspace{14pt}
 	\caption{Comparative execution models: Apache Spark versus distributed training for neural networks.}
 	\label{fig:execution-models}
